# myanmar_economic_monitor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_downloads/66ba04b92e3805e77b80cc28f25eab40/: gee-batch-export-mxd13q1.js
_downloads/b98183c268a8a323dfa56390534654c9/: modis_viproducts.py
_sources/: README.md
_sources/docs/: 3-add-resources.md
_sources/reports/: myanmar-economic-monitor-strategic-brief.md
data/: index_by_district_date_v2.csv
docs/: 3-add-resources.html  3-add-resources.md  _config.yml  _toc.yml  activity_proxies_final.md  data.html  data.md  foundational_datasets_and_data_products.md  introduction-to-data-goods.md  sample-indicators.html  sample-indicators.md  team.html  team.md
notebooks/conflict/: acled.html  acled.ipynb  conflict-and-ntl-updated.html  conflict-and-ntl-updated.ipynb  conflict-and-ntl.html  conflict-and-ntl.ipynb
notebooks/mobility/: README.md  activity.html  mobility.html  mobility.ipynb  mobility.qmd
notebooks/nighttime-lights/: 02_download_black_marble.R  03_aggregate.R  04_append.R  05_adm1_trends.R  05_adm_trends.R  05_data_for_workbook.R  05_gas_flare_trends.R  05_gas_flaring_map.R  05_gdp_vs_ntl.R  05_gdp_vs_ntl_annual.R  05_gdp_vs_ntl_quarterly.R  05_map_ntl_annual.R  05_map_ntl_annual_separate.R  05_map_ntl_annual_together.R  05_pc_2019_maps.R  05_sez_trends.R  README.md  _05_adm_trends.R  _main.R
notebooks/relative-wealth/: relative-wealth-index.html  relative-wealth-index.ipynb
notebooks/vegetation-conditions/: README.html  (+4 more)
reports/: myanmar-economic-monitor-strategic-brief.html  myanmar-economic-monitor-strategic-brief.md
(+40 files in other folders)
